Week 1 - SOLID Principles/solid/src/main/java/org/example/SRP/good/ITemplateEngine.java
package org.example.SRP.good;

public interface ITemplateEngine {
    String render(String s, String confirmationCode);
}
