Week 1 - SOLID Principles/solid/src/main/java/org/example/SRP/bad/ITemplateEngine.java
package org.example.SRP.bad;

public interface ITemplateEngine {
    String render(String s, String confirmationCode);
}
